--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -2,23 +2,11 @@ cmake_minimum_required(VERSION 3.14...3.31)
 
 project(GreeterStandalone LANGUAGES CXX)
 
-# --- Import tools ----
-
 include(../cmake/tools.cmake)
 
-# ---- Dependencies ----
-
-include(../cmake/CPM.cmake)
-
-CPMAddPackage(
-  GITHUB_REPOSITORY jarro2783/cxxopts
-  VERSION 3.0.0
-  OPTIONS "CXXOPTS_BUILD_EXAMPLES NO" "CXXOPTS_BUILD_TESTS NO" "CXXOPTS_ENABLE_INSTALL YES"
-)
+include(../cmake/cxxopts.cmake)
 
 CPMAddPackage(NAME Greeter SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
-
-# ---- Create cli executable ----
 
 file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
 
