--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -6,12 +6,10 @@ include(../cmake/tools.cmake)
 
 include(../cmake/cxxopts.cmake)
 
-CPMAddPackage(NAME wsrpc SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
-
 file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
 
 add_executable(${PROJECT_NAME} ${sources})
 
-set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17 OUTPUT_NAME "wsrpc")
+set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "wsrpc-server")
 
-target_link_libraries(${PROJECT_NAME} wsrpc::wsrpc cxxopts)
+target_link_libraries(${PROJECT_NAME} PRIVATE wsrpc::wsrpc cxxopts)
